# dice-roller

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md  handler.js  package-lock.json  package.json  serverless.yml
.github/: dependabot.yml
src/: lib.rs  main.rs
